[package]
name = "prom-eagle"
version = "0.1.0"
authors = ["Hyrum Wright <hyrum@hyrumwright.org>"]

[dependencies]
prometheus = "0.3"
hyper = "0.11"
lazy_static = "1.0.0"
log = "0.4"
env_logger = "0.5"
clap = "2.30.0"
serde = "1.0"
serde_yaml = "0.7"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.11"
futures = "0.1.14"
reqwest = "0.8"
